// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Jest: TmPanelDesktop (Shallow Snapshot) 1`] = `
<TmPanelDesktop
  dialogs={Array []}
/>
`;

exports[`Jest: TmPanelPhone (Shallow Snapshot) 1`] = `
<TmPanelPhone
  dialogs={Array []}
/>
`;
